kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: online-shop
  labels:
    environment: production
