kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: online-shop
  namespace: online-shop
spec:
  selector:
    app: online-shop
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
